Correct spacing for radio-button and label.

--- a/assets/js/base/components/payment-methods/style.scss
+++ b/assets/js/base/components/payment-methods/style.scss
@@ -190,7 +190,7 @@
 
 .wc-block-checkout__payment-method {
 	.wc-block-components-radio-control__option {
-		padding-left: 44px;
+		padding-left: 56px;
 		&::after {
 			content: none;
 		}
